# AdaptiveAgent

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  llm.py  main.py  models.py  seed.py
backend/app/adapt/: loop.py  prompt_updater.py  strategies.py
backend/app/agent/: graph.py  prompts.py  state.py  tools.py
backend/app/api/: adapt.py  cases.py  chat.py  dashboard.py  evals.py
backend/app/benchmarks/: __init__.py  adversarial.py  compare.py  compare_cli.py  compare_metrics.py  compare_runners.py  compare_suite.py  compare_types.py  judge_calibration.py  judge_calibration_cases.py  report_html.py  run.py
backend/app/eval/: checks.py  runner.py  schemas.py
backend/app/memory/: cases.py  store.py
backend/benchmark-results/: compare-smoke-fixed.html  compare-smoke-fixed.json  compare-smoke-live.html  compare-smoke-live.json  compare.html  compare.json  fast.html  fast.json  full.html  full.json  index.html  stress-live.html  stress-live.json  stress-tool-use.html  stress-tool-use.json
backend/tests/: conftest.py  test_adapt.py  test_adversarial_benchmark.py  test_benchmark_html.py  test_benchmarks.py  test_chat.py  test_compare_benchmark.py  test_dashboard.py  test_eval.py  test_eval_checks.py  test_health.py  test_judge_calibration.py  test_llm.py  test_prompt_updater.py
docs/plans/: enumerated-doodling-dahl.md
docs/runbooks/: benchmarking.md
frontend/: package.json  playwright.config.ts  pnpm-lock.yaml
frontend/e2e/: adapt.spec.ts  cases.spec.ts  chat.spec.ts  (+2 more)
(+25 files in other folders)
